hover on mobile issue fixed

--- a/src/components/partial-views/header/header.component.scss
+++ b/src/components/partial-views/header/header.component.scss
@@ -19,11 +19,12 @@
             padding-bottom: 1%;
             padding-left: 5%;
 
-            &:hover {
-                transition: background-color 0.6s;
-                background-color: #164863;
-
-                color: #9BBEC8;
+            @media only screen and (min-width: 601px) {
+                &:hover {
+                    transition: background-color 0.6s;
+                    background-color: #164863;
+                    color: #9BBEC8;
+                }
             }
         }
 
@@ -59,7 +60,7 @@
         flex-direction: column;
         cursor: pointer;
         padding-left:5%;
-        padding-right: 50%;
+        padding-right: 30%;
     }
     #mobile-logo >*{
         height:44px;
